--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
   <li>BTVP High School(Kannad.M)</li>
   </ul>
   <hr size="4" noshade>
-  <h3>HOBBIES</h3>
-      <ol type="i">
-      <li><a href="https://vulcanpost.com/13318/10-inspiring-books-every-youth-read/">Reading Books</a></li>
-      <li><a href="https://www.thrillophilia.com/places-to-visit-in-kerala/">Traveling</a></li>
-      <li><a href="https://en.wikipedia.org/wiki/Fifty_Shades_of_Grey_(film)/">Watching Movies</a></li>
-      </ol>
-      <hr size="4" noshade>
-  <h3>SKILLS</h3>
+  <h3>TECH SKILLS</h3>
   <ul>
     <li>Data structure and Algorithum</li>
     <li>Machine Learning</li>
     <li>Web Development</li>
     <li>Neural Networks</li>
+    <li>Python</li>
+    <li>C and Java</li>
+  </ul>
+  <hr size="4" noshade>
+  <h3>OTHER SKILLS</h3>
+  <ul>
+    <li>Communication</li>
+    <li>Leadership</li>
   </ul>
   <hr size="4" noshade>
   <h3>RESULTS</h3>
@@ -54,8 +55,11 @@
     </tr>
   </table>
   <hr size="4" noshade>
-  <a href="detail.html">CONTACT ME</a> <br>
-  <a href="Hobbies.html">HOBBIES</a>
+  <h3>My work</h3>
+  <ul>
+    <li><a href="https://revanswamy.github.io/sample/">Sample</a></li>
+    <li><a href="https://revanswamy.github.io/TINDOG/">Tindog</a></a></li>
+  </ul>
 
 
 </body>
